# noita-flag-editor

./: LICENSE  README.md  biome.json  index.html  lefthook.yml  package-lock.json  package.json
.github/workflows/: release.yaml
scripts/: updateVersion.js
src/: const.ts  enemy-icons.css  get-html-element.ts  icons.css  main.ts  rewrite-files.ts  secret.ts  spell-icons.css  start-watching.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  target_address.rs
src/events/: delete-bones-new-event.ts  edit-flags-button.ts  end-watching-auto-rewrite-event copy.ts  end-watching-auto-rewrite-event.ts  end-watching-button.ts  end-watching-event.ts  load-flags-button.ts  load-flags-event.ts  manual-rewrite-event.ts  noita-folder-select-button.ts  noita-folder-select-event.ts  rewrite-event.ts  save-flags-button.ts  save-flags-event.ts  set-current-flags-button.ts  start-watching-auto-rewrite-event.ts  start-watching-button.ts  start-watching-event.ts
src/interfaces/: backend.ts  event.ts  interfaces.ts  noita.ts  setting.ts
src/models/: settings.ts
src/utils/: date.ts  file.ts  folder.ts
