[package]
name = "noita-flag-editor"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
sysinfo = "0.37.0"
winapi = { version = "0.3", features = [
    "handleapi",
    "memoryapi",
    "processthreadsapi",
    "tlhelp32",
    "winnt",
    "psapi",
] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
regex = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[lib]
name = "noita_flag_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
